# FlexLLMGenMPS

./: README.md  pyproject.toml
flexllmgen/: compression.py  flex_opt.py  profile_bandwidth.py  profile_matmul.py  pytorch_backend.py  utils.py
