[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexllmgenmps"
version = "0.1"
description = "Running large language models on a single M1/M2 GPU. Focusing on high-throughput large-batch generation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.7.1", "transformers>=4.24",
    "numpy", "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/virtualramblas/FlexLLMGenMPS"
"Bug Tracker" = "https://github.com/virtualramblas/FlexLLMGenMPS/issues"
